# Hexxagon-Game-Atlas

./: .gitignore  CHANGELOG.md  Hexxagon-Game-Atlas.cabal  README.md  cabal.project  prompt.sh
Extras/: Extras.hs  FlatInstance.hs
Scripts/: InitialiseGameSC.json  PlayerIdentifierMP.json  RefNFTManagerSC.json  RunGameSC.json
app/: GameConfig.hs  GetAddresses.hs  GetConfig.hs  Main.hs  RunServer.hs  hexxBoardConfig-main.hs  hexxagon-main.hs
app/Browser/: index.html  script.js  style.css
nix/: hix.nix
server/: GetAddresses.hs  GetConfig.hs  Main.hs  RunServer.hs  Server-Main.hs  SignTransaction.hs
src/: Constants.hs  DAppConfig.hs  DataTypes.hs  Functions.hs  GYUtilities.hs  IOFxs.hs  IOUtilities.hs  Instances.hs  MainFunction.hs  MainFxs.hs  Scripts.hs  UtilityFxs.hs  Variables.hs
src/Actions/: CancelGame.hs  CreateGame.hs  GameOver.hs  JoinGame.hs  MintPlayerNFT.hs  PlayGame.hs  RunGame.hs  StartGame.hs  TimeOut.hs
test/: Arbitrary.hs  Main.hs  Test_Arbitrary.hs  Test_Instances.hs  Test_UtilityFxs.hs
test/Arbitrary/: DataTypes.hs  Generators.hs  PlutusDT.hs  PlutusTx.hs
