cabal-version:      3.6
name:               Hexxagon-Game-Atlas
version:            0.1.0.0
synopsis:           Hexxagon game on the Cardano Blockchain : Off-Chain Code
license:            NONE
author:             Dr-Mazen-Khaddaj, Andrew Garrett Wright
maintainer:         MazenKhaddaj@outlook.com
-- copyright:
category:           Blockchain, Cardano, Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common language
    default-language: GHC2021
    default-extensions:
        DataKinds
        DeriveAnyClass
        DerivingStrategies
        DerivingVia
        GADTs
        LambdaCase
        MultiWayIf
        OverloadedStrings
        RecordWildCards
        RoleAnnotations
        TypeFamilies
        UndecidableInstances
        ViewPatterns
        OverloadedRecordDot

    ghc-options: -Wall -Wincomplete-uni-patterns
                --  -Wunused-packages

common dependencies
    build-depends:    base
                    , aeson
                    , swagger2
                    , servant-server
                    , servant-swagger
                    , wai
                    , wai-cors
                    , http-types
                    , warp
                    , scotty
                    , http-conduit
                    , req
                    , async
                    , split
                    , containers
                    , text
                    , mtl
                    , bytestring
                    , base16-bytestring
                    , atlas-cardano
                    , plutus-core
                    , plutus-tx
                    , plutus-tx-plugin
                    , plutus-ledger-api
                    , cardano-api
                    , data-default
                    , flat
                    , cborg
                    , serialise
                    , deepseq
                    , hex
                    , haskeline
                    , time
                    , directory
                    , filepath
                    , ansi-terminal
                    , aeson-pretty
                    , transformers

library
    import:           language, dependencies
    hs-source-dirs:   src
                    , Extras
    exposed-modules:  DataTypes
                    , Instances
                    , UtilityFxs
                    , GYUtilities
                    , IOUtilities
                    , MainFxs
                    , IOFxs
                    , Constants
                    , Scripts
                    , DAppConfig

                    , Actions.CreateGame
                    , Actions.CancelGame
                    , Actions.JoinGame
                    , Actions.RunGame
                    , Actions.MintPlayerNFT

                    , Extras
                    , FlatInstance

executable Hexxagon-Game-Atlas
    import:           language, dependencies
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:    GetAddresses
                      SignTransaction
                      RunServer
                      GetConfig
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-T
    build-depends:    Hexxagon-Game-Atlas

test-suite Hexxagon-Game-Atlas-test
    import:           language, dependencies
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Arbitrary
                    , Arbitrary.DataTypes
                    , Arbitrary.Generators
                    , Arbitrary.PlutusDT
                    , Test_Arbitrary
                    , Test_Instances
                    , Test_UtilityFxs
    -- other-extensions:
    ghc-options: -threaded -rtsopts
    build-depends:    Hexxagon-Game-Atlas
                    , plutus-simple-model
                    , tasty
                    , tasty-quickcheck
                    , tasty-hedgehog
                    , tasty-hunit
                    , hedgehog
                    , hedgehog-quickcheck
                    , QuickCheck
